bug fixes, readability fix?

--- a/source_scss/scss/_typography.scss
+++ b/source_scss/scss/_typography.scss
@@ -23,6 +23,7 @@ img {
 
 p {
   line-height: 1.5em;
+  font-size: 16px;
   margin-bottom: 1.5em;
 }
 
@@ -31,6 +32,7 @@ a {
   text-decoration: none;
   transition: color .1s ease-in-out;
   font-weight: $subsubheading-weight;
+
   &:hover {
     color: $brand-secondary;
     //opacity: 0.7;
@@ -41,6 +43,7 @@ a {
     //opacity: 1;
     color: $brand-secondary;
   }
+
   &:active {
     color: $brand-secondary;
     opacity: 1;
@@ -50,7 +53,10 @@ a {
 
 // titles commons
 .text {
-  &-huge, &-big, &-medium {
+
+  &-huge,
+  &-big,
+  &-medium {
     line-height: 1.3em;
     margin-bottom: 1em;
     margin-top: 1.5em;
@@ -115,7 +121,8 @@ a {
   }
 
   // Colours
-  @each $type, $color in $background-color-map {
+  @each $type,
+  $color in $background-color-map {
     &-#{$type} {
       color: $color;
     }
@@ -167,12 +174,13 @@ button.text-gray {
 
 // titles after titles
 .text-with-subtitle {
-  margin-bottom: 0!important;
+  margin-bottom: 0 !important;
 
-  + .text-huge,
-  + .text-big,
-  + .text-medium,
-  + .text-small, {
+  +.text-huge,
+  +.text-big,
+  +.text-medium,
+  +.text-small,
+    {
     margin-top: .5em;
   }
 }
